# NeuroFlow

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
icons/24x24/: Thumbs.db
scripts/: Main.py  __init__.py
scripts/DICOM/: DICOMReader.py  DICOMWriter.py  Sequence.py  Series.py  Study.py
scripts/Helper/: ColorMapPicker.py  Resources.py
scripts/ToolBox/: AutoSegmentation.py  DataWriter.py  FlowPresets.py  FlowToolbox.py
scripts/UI/: Cursor.py  FileTreeView.py  Logo.py  MainWindow.py  SideMenu.py  StatusBar.py  TitleBar.py
scripts/UI/Graphics/: FlowGraphicsView.py  KernelGraphics.py  MaskGraphicsView.py  OverlayGraphics.py  SeriesGraphicsView.py
scripts/UI/Stats/: ImageStats.py
scripts/UI/Tables/: FlowTableView.py  PatientTableView.py
scripts/UI/Toolbar/: AutoSegmentationButton.py  ClearButton.py  ColorMapButton.py  KernelButton.py  OverlayButton.py  PlayButton.py  SaveButton.py  Toolbar.py
scripts/UIControllers/: UIController.py
src/neuroflow/: Main.py  README.md
src/neuroflow/DICOM/: DICOMReader.py  Image.py  Patient.py
src/neuroflow/Helper/: ColorMapPicker.py  ColorPicker.py  Resources.py  SegmentationRegion.py
src/neuroflow/ToolBox/: AutoSegmentation.py  DataWriter.py  FlowPresets.py  FlowToolbox.py
src/neuroflow/UI/: Application.py  FileTreeView.py  Logo.py  MainWindow.py  Settings.py  SideMenu.py  StatusBar.py  TitleBar.py
src/neuroflow/UI/Graphics/: FlowGraphicsView.py  KernelGraphics.py  MaskGraphicsView.py  OverlayGraphics.py  SeriesGraphicsView.py
src/neuroflow/UIControllers/: UIController.py
(+13 files in other folders)
