[tool.poetry]
name = "neuroflow"
version = "1.0.0"
description = "NeuroFlow"
authors = ["Pa Lab"]
license = "MIT"
readme = "README.md"
packages = [{include = "neuroflow", from="src"}]

[tool.poetry.group.dev.dependencies]
build = "^1.0.3"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
nox = "^2023.4.22"
flake8 = "^6.1.0"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
mypy = "^1.6.1"
pyqt5 = "^5.15.10"
scikit-image = "^0.22.0"
pandas = "^2.1.2"
pydicom = "^2.4.3"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"